width fixed for home page boxes on tablet

--- a/cartridges/app_kuiu_core/cartridge/static/default/css/kuiu-responsive.css
+++ b/cartridges/app_kuiu_core/cartridge/static/default/css/kuiu-responsive.css
@@ -1106,8 +1106,9 @@
 	.home-bottom-first .home-small {
 		bottom: 0;
 		left: 0;
-		margin: 0 15px;
+		margin: 0 10px;
 		position: absolute;
+		width:calc(100% - 20px);
 	}
 	
 	/* home slider styles */
